@@ -148,25 +148,25 @@ void UniformSampleTriangle(const float u1, const float u2, float *u, float *v) {
 }
 
 void LowDiscrepancySampleTriangle(const float u1, float *u, float *v) {
-	//New implementation from: https://pharr.org/matt/blog/2019/02/27/triangle-sampling-1.html
+	// New implementation from: https://pharr.org/matt/blog/2019/02/27/triangle-sampling-1.html
 	// and: https://pharr.org/matt/blog/2019/03/13/triangle-sampling-1.5.html
-	uint32_t uf = u1 * (1ull << 32);  // Fixed point
-	float cx = 0.0f, cy = 0.0f;
-	float w = 0.5f;
+	u_int uf = u1 * (1ull << 32);  // Fixed point
+	float cx = 0.f, cy = 0.f;
+	float w = .5f;
 
-	for (unsigned int i = 0; i < 16; i++) {
-		uint32_t uu = uf >> 30;
+	for (u_int i = 0; i < 16; i++) {
+		u_int uu = uf >> 30;
 		bool flip = (uu & 3) == 0;
 
 		cy += ((uu & 1) == 0) * w;
 		cx += ((uu & 2) == 0) * w;
 
-		w *= flip ? -0.5f : 0.5f;
+		w *= flip ? -.5f : .5f;
 		uf <<= 2;
 	}
 
-	*u = cx + w / 3.0f;
-	*v = cy + w / 3.0f;
+	*u = cx + w / 3.f;
+	*v = cy + w / 3.f;
 }
 
 float UniformConePdf(const float cosThetaMax) {
